Added some corrolaries and theorems from chapter 3

--- a/cot4210/exam2/exam2.tex
+++ b/cot4210/exam2/exam2.tex
@@ -132,6 +132,16 @@ if some turing machine decides it. \\
 \textbf{\textit{Corrollary 3.15}} \\
 A language is Turing-recognizable if and only if some multitape Turing machine recognizes it.
 
+\textbf{\textit{Corrollary 3.18}} \\
+A language is Turing-recognizable if and only if some nondeterministic Turing machine recognizes it.
+
+\textbf{\textit{Corrollary 3.19}} \\
+A language is decidable if and only if some nondeterministic Turing machine decides it.
+
+\textbf{\textit{Theorems}} \\
+\begin{itemize}
+	\item{A language is Turing-recognizable if and only if some enumerator enumerates it.
+\end{itemize}
 \subsection{The Defenition of Algorithm}
 
 
