Changed all to be an itemized list and combined the corrollaries and theorems to be together

--- a/cot4210/exam2/exam2.tex
+++ b/cot4210/exam2/exam2.tex
@@ -129,19 +129,14 @@ if some turing machine decides it. \\
 
 \subsection{Turing Machine Variants}
 
-\textbf{\textit{Corrollary 3.15}} \\
-A language is Turing-recognizable if and only if some multitape Turing machine recognizes it.
-
-\textbf{\textit{Corrollary 3.18}} \\
-A language is Turing-recognizable if and only if some nondeterministic Turing machine recognizes it.
-
-\textbf{\textit{Corrollary 3.19}} \\
-A language is decidable if and only if some nondeterministic Turing machine decides it.
-
-\textbf{\textit{Theorems}} \\
+\textbf{\textit{Theorems and Corrollaries}}
 \begin{itemize}
-	\item{A language is Turing-recognizable if and only if some enumerator enumerates it.
+\item{A language is Turing-recognizable if and only if some multitape Turing machine recognizes it.}
+\item{A language is Turing-recognizable if and only if some nondeterministic Turing machine recognizes it.}
+\item{A language is decidable if and only if some nondeterministic Turing machine decides it.}
+\item{A language is Turing-recognizable if and only if some enumerator enumerates it.
 \end{itemize}
+
 \subsection{The Defenition of Algorithm}
 
 
