--- a/cot4210/exam2/exam2.tex
+++ b/cot4210/exam2/exam2.tex
@@ -206,8 +206,14 @@ $HALT_{TM}$ is undecidable because we can reduce $A_{TM}$ to $HALT_{TM}$
       $EQ_{CFG}$  & undecidable \\ \hline
       $A_{TM}$    & undecidable \\ \hline
       $A_{TM}$    & Turing-recognizable \\ \hline
-      $\overline{A_{TM}}$ & not Turing Recognizable \\
-    \hline  
+      $\overline{A_{TM}}$ & not Turing-recognizable \\ \hline
+      $HALT_{TM}$ & undecidable \\ \hline
+      $E_{TM}$ & undecidable \\ \hline
+      $REGULAR_{TM}$ & undecidable \\ \hline
+      $EQ_{TM}$ & undecidable \\ \hline
+      $A_{LBA}$ & decidable \\ \hline
+      $E_{LBA}$ & undecidable \\ \hline
+      $ALL_{CFG}$ & undecidable \\ \hline
 \end{tabular}
 
 \rule{0.3\linewidth}{0.25pt}
