--- a/cot4210/final/final.tex
+++ b/cot4210/final/final.tex
@@ -6,6 +6,7 @@
 \usepackage{hyperref}
 \usepackage[]{algorithm2e}
 \usepackage{graphicx}
+\usepackage{xcolor}
 
 % To make this come out properly in landscape mode, do one of the following
 % 1.
@@ -34,6 +35,7 @@
 % To Do:
 % \listoffigures \listoftables
 % \setcounter{secnumdepth}{0}
+
 
 
 % This sets page margins to .5 inch if using letter paper, and to 1cm
@@ -65,6 +67,12 @@
                                 {1ex plus .2ex}%
                                 {\normalfont\small\bfseries}}
 \makeatother
+
+\newcommand{\cfbox}[2]{%
+    \colorlet{currentcolor}{.}%
+    {\color{#1}%
+    \framebox[1.1\width]{\color{currentcolor}#2}}%
+}
 
 % Define BibTeX command
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
@@ -310,6 +318,11 @@ Since $A_{TM}$ is undecidable though, we can conclude that no decider for L exis
 $\mathrm{L} = \{ \langle{ D, M \rangle} | $ D is a DFA and M is a Turing Machine such that L(M) = L(D) \}
 
 \section{Known Reduction}
+\subsection{3-SAT to VERTEX COVER}
+$\phi = (x_1 \vee x_1 \vee x_2) \wedge (\overline{x_1} \vee \overline{x_2} \vee \overline{x_2} ) \wedge (\overline{x_1} \vee x_2 \vee x_2)$
+\includegraphics[width=0.8\linewidth]{satvc}\\
+Circle the vertices that will minimally cover each edge
+
 \subsection{3-SAT to CLIQUE}
 \begin{enumerate}
   \item Pick an instance of 3-SAT with k clause
@@ -321,15 +334,45 @@ $\mathrm{L} = \{ \langle{ D, M \rangle} | $ D is a DFA and M is a Turing Machine
 $\phi = (x_1 \vee x_1 \vee x_2) \wedge (\overline{x_1} \vee \overline{x_2} \vee \overline{x_2} ) \wedge (\overline{x_1} \vee x_2 \vee x_2)$
 
 \includegraphics[width=0.8\linewidth]{satclique}
- 
 
-
+\subsection{3-SAT to SUBSET-SUM: Prove SS-SUM is NP-Complete}
+$$
+\left(x_{1} \vee x_{2} \vee \overline{x_{3}}\right)\wedge\left(\overline{x_{1}}\vee x_{2}\vee \overline{x_{3}}\right)\wedge\left(x_{1}\vee \overline{x_{2}}\vee x_{3}\right)\wedge\left(\overline{x_{1}}\vee \overline{x_{2}}\vee \overline{x_{3}}\right)
+$$
+$$3-SAT \leq_{p} SUBSET-SUM$$
+We can reduce 3-SAT to SUBSET-SUM by representing the variables and clauses in a table. We encode the selection of truth values into a subset sum problem as follows: \\ 
+\begin{tabular}{l | l l l | l l l r }
+& \multicolumn{3}{ c| }{Vars} & \multicolumn{4}{ |c }{Clauses} \\
+ & 1 & 2 & 3 & 1 & 2 & 3 & 4 \\ \hline
+$x_{1}$ & 1 & 0 & 0 & \framebox[1.1\width]{1} \par & 0 & \framebox[1.1\width]{1} \par & 0 \\
+$\overline{x_{1}}$ & 1 & 0 & 0 & 0 & 1 & 0 & 1 \\
+$x_{2}$ & 0 & 1 & 0 & \cfbox{black}{1} & \framebox[1.1\width]{1} \par & 0 & 0 \\
+$\overline{x_{2}}$ & 0 & 1 & 0 & 0 & 0 & \cfbox{green}{1} \par & \cfbox{green}{1} \par \\
+$x_{3}$ & 0 & 0 & 1 & 0 & 0 & 1 & 0 \\
+$\overline{x_{3}}$ & 0 & 0 & 1 & \framebox[1.1\width]{1} \par & \framebox[1.1\width]{1} \par & 0 & \framebox[1.1\width]{1} \par \\ \hline
+$S_{1a}$ & 0 & 0 & 0 & 1 & 0 & 0 & 0 \\
+$S_{1b}$ & 0 & 0 & 0 & 1 & 0 & 0 & 0 \\
+$S_{2a}$ & 0 & 0 & 0 & 0 & \framebox[1.1\width]{1} \par & 0 & 0 \\
+$S_{2b}$ & 0 & 0 & 0 & 0 & 1 & 0 & 0 \\
+$S_{3a}$ & 0 & 0 & 0 & 0 & 0 & \framebox[1.1\width]{1} \par & 0 \\
+$S_{3b}$ & 0 & 0 & 0 & 0 & 0 & \framebox[1.1\width]{1} \par & 0 \\
+$S_{4a}$ & 0 & 0 & 0 & 0 & 0 & 0 & \framebox[1.1\width]{1} \par \\
+$S_{4b}$ & 0 & 0 & 0 & 0 & 0 & 0 & \framebox[1.1\width]{1} \par \\ \hline
+Target & 1 & 1 & 1 & 3 & 3 & 3 & 3 \\
+\end{tabular} \\ \vspace{3pt} 
+$x_{1}$ = True \\
+$x_{2}$ = True or False (denoted by a green box) \\
+$x_{3}$ = False \\
+$C_{1}$ = 3 = 3 \\
+$C_{2}$ = 2 + 1 = 3\\
+$C_{3}$ = 1 + 2 = 3\\
+$C_{4}$ = 1 + 2 = 3\\
+By computing the subset sum of each of the columns where Target is the bottom row we can solve Subset-Sum if we can solve 3-SAT\\
 
 %Copyright \copyright\ 2015 Conner Brooks 
-
-\href{http://github.com/connerbrooks/cheat-sheets}{http://github.com/connerbrooks/cheat-sheets}
-\newline
-Greetz to my bud \href{http://github.com/broglea}{brogle}.
+\vspace{5pt}
+\href{http://github.com/connerbrooks/cheat-sheets}{http://github.com/connerbrooks/cheat-sheets}\\
+Greetz to my bud \href{http://github.com/broglea}{brogle... He did the zweet table}.
 
 \end{multicols}
 \end{document}
