--- a/cot4210/final/final.tex
+++ b/cot4210/final/final.tex
@@ -7,6 +7,7 @@
 \usepackage[]{algorithm2e}
 \usepackage{graphicx}
 \usepackage{xcolor}
+\usepackage{listings}
 
 % To make this come out properly in landscape mode, do one of the following
 % 1.
@@ -51,6 +52,7 @@
 % Turn off header and footer
 \pagestyle{empty}
  
+\lstset{language=Java}
 
 % Redefine section commands to use less space
 \makeatletter
@@ -106,43 +108,6 @@
 \begin{center}
      \Large{\textbf{Big Discrete Cheat Sheet}} \\
 \end{center}
-
-\section{3 The Church-Turing Thesis}
-\subsection{3.1 Turing Machines}
-\subsubsection{Definitions}
-A \textbf{\textit{Turing machine}} is a 7-tuple, \\
-\((Q, \Sigma, \Gamma, \delta, q_{0}, q_{accept}, q_{reject} )\) \\
-\begin{enumerate}
-  \item $Q$ is the set of states, 
-  \item $\Sigma$ is the input alphabet not containing the \textbf{\textit{blank symbol}} $\sqcup$ 
-  \item $\Gamma$ is the tape alphabet, where $\sqcup\ \in\ \Gamma$ and $\Sigma\ \subseteq\ \Gamma$,
-  \item $\delta:\ Q \times \Gamma\ \rightarrow Q \times \Gamma \times \{L,\ R\}$
-  \item $q_{0}\ \in\ Q$ is the start state,
-  \item $q_{accept}\ \in\ Q$ is the accept state, and
-  \item $q_{reject}\ \in\ Q$ is the reject state, where $q_{reject} \neq q_{accept}$.
-\end{enumerate}
-Transition function $\delta(q,a)$ = $(r,b,\{L,R\})$ \\
-Where $q$ is the current state, $a$ is what we read, $r$ is the state we move to, $b$ is what we will write, and ${L,R}$ is the direction we move.
-
-\begin{description}
-  \item[Definition 3.5] Call the language \textbf{\textit{Turing-Recognizable}} if some Turing machine recognizes it.
-  \item[Definition 3.6] Call a language \textbf{\textit{Turing-decidable}} or simply  \textbf{\textit{decidable}} if some turing machine decides it. \\ 
-\end{description}
-
-\subsubsection{Side-notes}
-The collection of strings that M accepts is \textbf{\textit{the language of M}}, \\
-or \textbf{\textit{the language recognized by M}}, denoted L(M). \\ 
-
-\subsection{3.2 Turing Machine Variants}
-
-\textbf{\textit{Theorems and Corrollaries}}
-\begin{itemize}
-\item A language is Turing-recognizable if and only if some multitape Turing machine recognizes it.
-\item A language is Turing-recognizable if and only if some nondeterministic Turing machine recognizes it.
-\item A language is decidable if and only if some nondeterministic Turing machine decides it.
-\item A language is Turing-recognizable if and only if some enumerator enumerates it.
-\end{itemize}
-
 
 \section{4 Decidability}
 \subsubsection{Other Info}
@@ -234,33 +199,6 @@ In terms of computability theory, if A is reducible to B and B is decidable, A a
 \rule{0.3\linewidth}{0.25pt}
 \scriptsize
 
-\section{7 Time Complexity}
-\subsection{7.1 Measuring Complexity}
-\begin{description}
-  \item[Definition 7.1] Let M be a deterministic Turing machine that halts on all inputs. The running time or time complexity of M is the function $f: \mathcal{N} \rightarrow \mathcal{N}$, where $f(n)$ is the maximum number of steps that M uses on any input of length n. If $f(n)$ is the running time of M, we say that M runs in time $f(n)$ and that M is an $f(n)$ time Turing machine. Customarily we use n to represent the length of the input. 
-  \item[Defenition 7.2] Let $f$ and $g$ be functions $f,g: \mathcal{N} \rightarrow \mathcal{R}^{+}$. Say that $f(n) = O(g(n))$ if positive integers $c$ and $n_{0}$ exists such that for every integer $ n \leq n_{0}$, $f(n) \leq cg(n)$. When $f(n) = O(g(n))$, we say that $g(n)$ is an upper bound for $f(n)$, or more precisely, that $g(n)$ is an asymptotic upper bound for $f(n)$, to emphasize that we are suppressing constant factors. 
-  \item[Defenition 7.5] Let $f$ and $g$ be functions $f,g: \mathcal{N} \rightarrow \mathcal{R}^{+}$. Say that $f(n) = O(g(n))$ if $$\lim_{x\to\infty} \frac{f(n)}{g(n)} = 0 $$ In other words, $f(n) = o(g(n))$ means that for any real number $c > 0$, a number $n_{0}$ exists, where $f(n) < cg(n)$ for all $n \geq n_{0}$
-  \item[Defenition 7.7] Let $t:\mathcal{N} \rightarrow \mathcal{R}^{+}$ be a function. Define the time complexity class, TIME$(t(n))$, to be the collection of all languages that are decidable by an $O(t(n))$ time Turing machine.
-  \item[Defenition 7.9] Let $N$ be a nondeterministic Turing machine that is a decider. Ther running time of $N$ is the function $f:\mathcal{N} \rightarrow \mathcal{N}$, where $f(n)$ is the maximum number of steps that $N$ uses on any branch of its computation on any input of lenth $n$, as shown in the following figure.
-\end{description}
-
-\subsection{7.2 The Class P}
-\begin{description}
-  \item[Definition 7.12] P is the class of languages that are decidable in polynomial time on a deterministic single-tape Turing machine. In other words, $$P = \bigcup_{k} TIME(n^{k})$$
-\end{description}
-\begin{enumerate}
-  \item P is invariant for all models of computation that are polynomially equivalent to the deterministic single-tape Turing machine.
-  \item P roughly corresponds to the class of problems that are realistically solvable on a computer. 
-\end{enumerate}
-
-\subsection{7.3 The Class NP}
-
-\begin{itemize}
-  \item SUBSET-SUM = \{ $\langle{ S, t \rangle} | S = \{x_1, \dots , x_k \}$, and for some $\{y_1, \dots , y_k \} \subseteq \{x_1, \dots , x_k \}$ we have $\Sigma y_i = t$ \}
-
-\end{itemize}
-
-
 \section{Tite Solutions}
 \subsection{3 Decidability}
 
@@ -335,6 +273,28 @@ $\phi = (x_1 \vee x_1 \vee x_2) \wedge (\overline{x_1} \vee \overline{x_2} \vee 
 
 \includegraphics[width=0.8\linewidth]{satclique}
 
+\subsection{Vertex-Cover to Subset-Sum}
+Prove Subset-Sum is NP-Complete by mapping Vertex-Cover to Subset-Sum\\
+\includegraphics[width=0.8\linewidth]{vcss}
+\begin{tabular}{l | l | l l l l l l l l l }
+ & $x$ & $e_{1}$ & $e_{2}$ & $e_{3}$ & $e_{4}$ & $e_{5}$ & $e_{6}$ & $e_{7}$ & $e_{8}$ & $e_{9}$ \\ \hline
+\hfill$v_{1}$ & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 \\ \cline{2-11}
+\hfill$v_{2}$ & \multicolumn{1}{|c|}{\cfbox{black}{1} \par} & 0 & \cfbox{black}{1} \par & 0 & \cfbox{black}{1} \par & 0 & 0 & \cfbox{black}{1} \par & 0 &\multicolumn{1}{c|}{\cfbox{black}{1} \par} \\ \cline{2-11}
+\hfill$v_{3}$ & \multicolumn{1}{|c|}{\cfbox{black}{1} \par} & \cfbox{black}{1} \par & 0 & 0 & \cfbox{black}{1} \par & \cfbox{black}{1} \par & \cfbox{black}{1} \par & 0 & 0 & \multicolumn{1}{c|}{0} \\ \cline{2-11}
+\hfill$v_{4}$ & 1 & 0 & 0 & 0 & 0 & 1 & 0 & 1 & 1 & 0 \\ \cline{2-11}
+\hfill$v_{5}$ & \multicolumn{1}{|c|}{\cfbox{black}{1} \par} & 0 & 0 & \cfbox{black}{1} \par & 0 & 0 & \cfbox{black}{1} \par & 0 & \cfbox{black}{1} \par & \multicolumn{1}{c|}{\cfbox{black}{1} \par} \\ \cline{2-11}
+\hfill$e_{1}$ & 0 & \cfbox{black}{1} \par & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\ 
+\hfill$e_{2}$ & 0 & 0 & \cfbox{black}{1} \par & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\ 
+\hfill$e_{3}$ & 0 & 0 & 0 & \cfbox{black}{1} \par & 0 & 0 & 0 & 0 & 0 & 0 \\ 
+\hfill$e_{4}$ & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & 0 & 0 \\ 
+\hfill$e_{5}$ & 0 & 0 & 0 & 0 & 0 & \cfbox{black}{1} \par & 0 & 0 & 0 & 0 \\ 
+\hfill$e_{6}$ & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 \\ 
+\hfill$e_{7}$ & 0 & 0 & 0 & 0 & 0 & 0 & 0 & \cfbox{black}{1} \par & 0 & 0 \\ 
+\hfill$e_{8}$ & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & \cfbox{black}{1} \par & 0 \\ 
+\hfill$e_{9}$ & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 \\ \hline
+Target & 3 & 2 & 2 & 2 & 2 & 2 & 2 & 2 & 2 & 2 \\
+\end{tabular} \\ \vspace{3pt} 
+
 \subsection{3-SAT to SUBSET-SUM: Prove SS-SUM is NP-Complete}
 $$
 \left(x_{1} \vee x_{2} \vee \overline{x_{3}}\right)\wedge\left(\overline{x_{1}}\vee x_{2}\vee \overline{x_{3}}\right)\wedge\left(x_{1}\vee \overline{x_{2}}\vee x_{3}\right)\wedge\left(\overline{x_{1}}\vee \overline{x_{2}}\vee \overline{x_{3}}\right)
@@ -344,20 +304,20 @@ We can reduce 3-SAT to SUBSET-SUM by representing the variables and clauses in a
 \begin{tabular}{l | l l l | l l l r }
 & \multicolumn{3}{ c| }{Vars} & \multicolumn{4}{ |c }{Clauses} \\
  & 1 & 2 & 3 & 1 & 2 & 3 & 4 \\ \hline
-$x_{1}$ & 1 & 0 & 0 & \framebox[1.1\width]{1} \par & 0 & \framebox[1.1\width]{1} \par & 0 \\
-$\overline{x_{1}}$ & 1 & 0 & 0 & 0 & 1 & 0 & 1 \\
-$x_{2}$ & 0 & 1 & 0 & \cfbox{black}{1} & \framebox[1.1\width]{1} \par & 0 & 0 \\
-$\overline{x_{2}}$ & 0 & 1 & 0 & 0 & 0 & \cfbox{green}{1} \par & \cfbox{green}{1} \par \\
-$x_{3}$ & 0 & 0 & 1 & 0 & 0 & 1 & 0 \\
-$\overline{x_{3}}$ & 0 & 0 & 1 & \framebox[1.1\width]{1} \par & \framebox[1.1\width]{1} \par & 0 & \framebox[1.1\width]{1} \par \\ \hline
-$S_{1a}$ & 0 & 0 & 0 & 1 & 0 & 0 & 0 \\
-$S_{1b}$ & 0 & 0 & 0 & 1 & 0 & 0 & 0 \\
-$S_{2a}$ & 0 & 0 & 0 & 0 & \framebox[1.1\width]{1} \par & 0 & 0 \\
-$S_{2b}$ & 0 & 0 & 0 & 0 & 1 & 0 & 0 \\
-$S_{3a}$ & 0 & 0 & 0 & 0 & 0 & \framebox[1.1\width]{1} \par & 0 \\
-$S_{3b}$ & 0 & 0 & 0 & 0 & 0 & \framebox[1.1\width]{1} \par & 0 \\
-$S_{4a}$ & 0 & 0 & 0 & 0 & 0 & 0 & \framebox[1.1\width]{1} \par \\
-$S_{4b}$ & 0 & 0 & 0 & 0 & 0 & 0 & \framebox[1.1\width]{1} \par \\ \hline
+\hfill $x_{1}$ & 1 & 0 & 0 & \framebox[1.1\width]{1} \par & 0 & \framebox[1.1\width]{1} \par & 0 \\
+\hfill $\overline{x_{1}}$ & 1 & 0 & 0 & 0 & 1 & 0 & 1 \\
+\hfill $x_{2}$ & 0 & 1 & 0 & \cfbox{black}{1} & \framebox[1.1\width]{1} \par & 0 & 0 \\
+\hfill $\overline{x_{2}}$ & 0 & 1 & 0 & 0 & 0 & \cfbox{green}{1} \par & \cfbox{green}{1} \par \\
+\hfill $x_{3}$ & 0 & 0 & 1 & 0 & 0 & 1 & 0 \\
+\hfill $\overline{x_{3}}$ & 0 & 0 & 1 & \framebox[1.1\width]{1} \par & \framebox[1.1\width]{1} \par & 0 & \framebox[1.1\width]{1} \par \\ \hline
+\hfill $S_{1a}$ & 0 & 0 & 0 & 1 & 0 & 0 & 0 \\
+\hfill $S_{1b}$ & 0 & 0 & 0 & 1 & 0 & 0 & 0 \\
+\hfill $S_{2a}$ & 0 & 0 & 0 & 0 & \framebox[1.1\width]{1} \par & 0 & 0 \\
+\hfill $S_{2b}$ & 0 & 0 & 0 & 0 & 1 & 0 & 0 \\
+\hfill $S_{3a}$ & 0 & 0 & 0 & 0 & 0 & \framebox[1.1\width]{1} \par & 0 \\
+\hfill $S_{3b}$ & 0 & 0 & 0 & 0 & 0 & \framebox[1.1\width]{1} \par & 0 \\
+\hfill $S_{4a}$ & 0 & 0 & 0 & 0 & 0 & 0 & \framebox[1.1\width]{1} \par \\
+\hfill $S_{4b}$ & 0 & 0 & 0 & 0 & 0 & 0 & \framebox[1.1\width]{1} \par \\ \hline
 Target & 1 & 1 & 1 & 3 & 3 & 3 & 3 \\
 \end{tabular} \\ \vspace{3pt} 
 $x_{1}$ = True \\
@@ -369,6 +329,44 @@ $C_{3}$ = 1 + 2 = 3\\
 $C_{4}$ = 1 + 2 = 3\\
 By computing the subset sum of each of the columns where Target is the bottom row we can solve Subset-Sum if we can solve 3-SAT\\
 
+\subsection{SUBSET-SUM to SUBSET-SUM-K}
+$$SUBSET\mbox{-}SUM \leq_{p} SUBSET\mbox{-}SUM\mbox{-}k$$\\
+\hspace{5pt}$SUBSET$-$SUM\langle S,T \rangle\{$\\
+\hspace{10pt}$SUBSET$-$SUB \in NP$ because we can verify a certificate in\\ \hspace{92pt}linear time. Given an answer you can\\ \hspace{92pt}verify it adds up to T and all of the\\ \hspace{92pt}elements of our subset are in our\\ \hspace{92pt}original set\\
+\hspace{10pt}$S=\{x_{1}, x_{2}, \ldots, x_{n}\}$\\
+\hspace{10pt}$Y=\sum\limits_{i=0}^{n}x_{i}$\\
+\hspace{10pt}$S' = \{Y,\ldots,Y_{n}, Y-x_{1}, Y-x_{2}, \ldots, Y-x_{n}\}$ where $|S'| = 2n$\\
+\hspace{10pt}$T' = nY-T$\\
+\hspace{10pt}$k=n$\\
+$\}$\\
+$S'$ is the set of n Y's and a Y minus each x value \\
+$T'$ is n numbers of Y's and you subtract your T value which is the x's you chose\\
+our k is now equal to n in our subset-sum-k\\
+$$SUBSET\mbox{-}SUM\mbox{-}k \leq_{p} SUBSET\mbox{-}SUM$$\\
+\begin{enumerate}
+\item $mY+(n-m)Y-(x for x \in soln) = nY-T$\\
+\item $(x\ for\ x \in soln) = T$\\
+\end{enumerate}
+
+\section{Greedy/DP Problems}
+\subsection{Dinner Problem}
+\begin{lstlisting}
+Public Static void main(String[] args){
+  memo = new long[n+1];
+  Arrays.fill(memo, -1);
+  memo[0] = 0;
+  long ans = ans(n);
+}
+static long ans(int n){
+  if(n <= 0) //base case 1
+    return n == 0 ? 1 : 0;
+  if(memo[n] != -1) //base case 2: check the memo
+    return memo[n];
+  long ans = 0;
+  ans += ans(n-2) + ans(n-5) + ans(n-10);
+  return memo[n] = ans; //save the answer
+}
+\end{lstlisting}
 %Copyright \copyright\ 2015 Conner Brooks 
 \vspace{5pt}
 \href{http://github.com/connerbrooks/cheat-sheets}{http://github.com/connerbrooks/cheat-sheets}\\
